<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:scrollbars="vertical"    
	    android:padding="15sp"
	    >
	
	<ImageView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:paddingBottom="30sp"
	    android:src="@drawable/logo"         
	    />
	
	<TextView  
		android:id="@+id/need_plancake_account"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/need_plancake_account"
	    android:paddingBottom="30sp"
	    android:textSize="15sp"
	    android:linksClickable="true"        
	    />
	    
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/enter_plancake_email_address"
	    android:paddingBottom="5sp"    
	    android:textSize="15sp"        
	    />    
	    
	<EditText
		android:id="@+id/plancake_email_address_edit_text"    
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:text=""
	    android:textSize="20sp"        
	/>    
	    
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/enter_plancake_password"
	    android:paddingTop="15sp"  
	    android:paddingBottom="5sp"    
	    android:textSize="15sp"        
	    />    
	    
	<EditText
		android:id="@+id/plancake_password_edit_text"    
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:password="true"
	    android:text=""
	    android:textSize="20sp"                 
	/>
	
	<Button
	  android:id="@+id/plancake_authentication_submit_button"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/submit_authentication_details" 
	    android:textSize="15sp"     
	  />  
	        
	</LinearLayout>

</ScrollView>