<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    >
    
  <TextView
    android:layout_width="fill_parent"    
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:text="@string/edit_inbox_title"
    android:textSize="20sp"
    android:textStyle="bold"
    android:background="@color/title_background_color"     
  />	    

<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/enter_inbox_task_description"
    android:paddingBottom="5sp"    
    android:paddingLeft="10sp"   
    android:paddingRight="10sp"   
    android:paddingTop="10sp" 
    android:textSize="15sp"        
    />    
    
<EditText
	android:id="@+id/inbox_task_description"    
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text=""
	android:gravity="top"     
    android:textSize="20sp" 
    android:paddingLeft="10sp"   
    android:paddingRight="10sp"              
/>    
    
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/enter_inbox_task_note"
    android:paddingTop="15sp"  
    android:paddingBottom="5sp"    
    android:textSize="15sp"
    android:paddingLeft="10sp"   
    android:paddingRight="10sp"               
    />    
    
<EditText
	android:id="@+id/inbox_task_note"    
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text=""
    android:lines="3"
	android:gravity="top"    
    android:textSize="20sp"
    android:paddingLeft="10sp"   
    android:paddingRight="10sp"                        
/>

<Button
	android:id="@+id/submit_inbox_task" 
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:text="@string/submit_inbox_task" 
    android:textSize="15sp"
    android:paddingLeft="10sp"   
    android:paddingRight="10sp"            
  />  
        
</LinearLayout>